--- a/js/package.json
+++ b/js/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
     "axios": "^0.21.1",
+    "blob.js": "^1.0.1",
+    "cross-blob": "^2.0.0",
     "discord.js": "^12.5.3",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "file-saver": "^2.0.5",
+    "fs": "*"
   }
 }
