--- a/js/package.json
+++ b/js/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "@discordjs/opus": "^0.5.0",
     "axios": "^0.21.1",
     "blob.js": "^1.0.1",
+    "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^4.3.0",
     "fs": "*",
     "ytdl-core": "^4.7.0"
   }
