trying to fix gitignore to ignore user files

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 node_modules/
 js/helloworld.md
 js/Assets/secretStuff/.
-js/Assets/userProfiles/.
+js/Assets/userProfiles/*
+!js/Assets/userProfiles/.gitkeep
