--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "UWA Discord Bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "localDev": "nodemon index.js",
+    "deployCommands": "node deployCommands.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,8 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.13"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.7",
