--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "UWA Discord Bot",
   "main": "index.js",
+  "engine": {
+    "node": "^16.5.0"
+  },
   "scripts": {
+    "start": "node index.js",
     "localDev": "nodemon index.js",
     "deployCommands": "node deployCommands.js"
   },
@@ -21,9 +25,7 @@
     "@discordjs/builders": "^0.5.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.22.0",
-    "discord.js": "^13.1.0",
-    "dotenv": "^10.0.0",
-    "nodemon": "^2.0.13"
+    "discord.js": "^13.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.7",
@@ -43,6 +45,8 @@
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.13"
   }
 }
