--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@discordjs/builders": "^0.5.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.22.0",
-    "discord.js": "^13.1.0"
+    "discord.js": "^13.1.0",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.7",
@@ -46,7 +47,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.4.1",
     "typescript": "^4.4.3",
-    "dotenv": "^10.0.0",
     "nodemon": "^2.0.13"
   }
 }
