added SQLLite Db, Sequelize ORM and User Model

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
-    "node-discord-logger": "^1.2.1"
+    "node-discord-logger": "^1.2.1",
+    "sequelize": "^6.6.5",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.7",
